--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-image: url(https://t4.ftcdn.net/jpg/02/89/72/69/240_F_289726988_cF9wzIATeSAOBxCg23NqnLeaKVfXWvdy.jpg);
+    background-size: cover;
+}
