Added mock star data

--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,1 +1,9 @@
-<div><span>name: </span>{{star.name}}</div>
+<h2>My Stars</h2>
+<ul class="stars">
+    <li *ngFor="let star of stars">
+    <button type="button">
+      <!--<span class="badge">{{star.id}}</span>-->
+      <span class="name">{{star.name}}</span>
+    </button>
+  </li>
+</ul>
