--- a/src/app/stars/stars.component.css
+++ b/src/app/stars/stars.component.css
@@ -15,7 +15,7 @@
     cursor: pointer;
     position: relative;
     left: 0;
-    background-color: #EEE;
+    background-color: white;
     margin: .5em;
     padding: 0;
     border-radius: 4px;
