--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,18 @@ body{
     background-image: url(https://t4.ftcdn.net/jpg/02/89/72/69/240_F_289726988_cF9wzIATeSAOBxCg23NqnLeaKVfXWvdy.jpg);
     background-size: cover;
 }
+
+.dashboard{
+    background-color: rgb(161, 50, 189);
+    margin-top: auto;
+    margin-bottom:auto;
+    margin-left: auto;
+    margin-right: auto;
+    width:80%;
+    padding:30px;
+}
+
+hr{
+    background-color: black;
+    border-color: black;
+}
