added images to stars

--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -11,3 +11,4 @@
     <h2>Description: </h2>
     <div>{{selectedStar.description}}</div>
 </div>
+<img *ngIf="selectedStar" src={{selectedStar.source}}>
